--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,31 @@
 ---
-title: "hopla"
+title: "TOTO"
 ---
+
+
+## On va commencer par une liste
+
+Avec des liens vers la....
+
+  * [Page 1](page1.qmd)
+  * [Page 2](page2.qmd)
+  
+
+```{r}
+library(ggplot2)
+library(dplyr)
+```
+
 
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
 ```{r}
-1 + 1
+mtcars %>%
+  ggplot(aes(mpg, qsec)) + 
+  stat_smooth(color = "darkorchid4", fill = "skyblue") + 
+  geom_point(color = "black", shape = 3) + 
+  theme_bw()
+
 ```
